--- a/biodata.html
+++ b/biodata.html
@@ -28,7 +28,7 @@
         <tr>
             <td>Name:</td>
             <td>Hariz Idlan Bin Rizal</td>
-            <td rowspan="1"><img src="https://yourimageurl.com/photo.jpg" alt="Photo"></td>
+            <td rowspan="4"><img src="yourphoto.jpg" alt="Photo"></td>
         </tr>
         <tr>
             <td>Date of Birth:</td>
