--- a/biodata.html
+++ b/biodata.html
@@ -28,7 +28,7 @@
         <tr>
             <td>Name:</td>
             <td>Hariz Idlan Bin Rizal</td>
-            <td rowspan="4"><img src="yourphoto.jpg" alt="Photo"></td>
+            <td rowspan="1"><img src="yourphoto.jpg" alt="Photo"></td>
         </tr>
         <tr>
             <td>Date of Birth:</td>
@@ -78,7 +78,7 @@
         </tr>
         <tr>
             <td>Programming Skills:</td>
-            <td colspan="2">HTML, C#, C++, Java, Android Studio,</td>
+            <td colspan="2">HTML, C#, C++, Java, Android Studio</td>
         </tr>
         <tr>
             <td>Personal Interest:</td>
